scrollbar fixed

--- a/src/components/HomePage/HomePageProjects/HomePageProjects.css
+++ b/src/components/HomePage/HomePageProjects/HomePageProjects.css
@@ -221,3 +221,9 @@
     margin-top: 1rem;
   }
 }
+
+@media (min-width: 1024px) {
+  .home-project-container {
+    padding: 3rem 20%;
+  }
+}
